First iteration of the plotting tools.

--- a/web/html/transfers/activity.html
+++ b/web/html/transfers/activity.html
@@ -1,6 +1,6 @@
 <div id="contents">
 <div>
-<form method='get' action='/web/transfers/sizes'>
+<form method='get' action='/web/transfers/activity'>
 <label for='graph' class='inline'>Graph: </label>
 <select name="graph" class="labeled">
   <option value="volume">Transfer Volume</option>
