Include Dynamo logo more coherently and add number of transfers (not volume).

--- a/web/html/header_common.html
+++ b/web/html/header_common.html
@@ -3,6 +3,7 @@
   <head>
     <title>{_TITLE_}</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <link rel="shortcut icon" href="https://avatars0.githubusercontent.com/u/18539873?s=400&u=a4f48f3bb15100e49cbad5309fff04b457d50b1b&v=4">
     <link href="/css/dynamo.css" rel="stylesheet">{_STYLESHEETS_}{_HEADER_STYLESHEET_}
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
     <script type="text/javascript" src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
@@ -10,7 +11,7 @@
   </head>
   <body>
     <header id="header">
-      <h1 id="pageTitle">{_TITLE_}</h1>{_TITLEBLOCK_}
+       <h1 id="pageTitle"><img align="middle" src="https://avatars0.githubusercontent.com/u/18539873?s=400&u=a4f48f3bb15100e49cbad5309fff04b457d50b1b&v=4" width="70"> {_TITLE_}</h1>{_TITLEBLOCK_}
       <div id="error"></div>
     </header>
     <main id="main">
